# onvif-interface

./: CMakeLists.txt  README.md  main.cpp
include/: soapDeviceBindingProxy.h  soapDeviceIOBindingProxy.h  soapDisplayBindingProxy.h  soapImagingBindingProxy.h  soapMedia2BindingProxy.h  soapMediaBindingProxy.h  soapPACSBindingProxy.h  soapPTZBindingProxy.h  soapPullPointSubscriptionBindingProxy.h  soapReceiverBindingProxy.h  soapSearchBindingProxy.h  soapwsddProxy.h  wsdd.nsmap
src/: chrono_time_point.cpp  soapDeviceBindingProxy.cpp  soapDeviceIOBindingProxy.cpp  soapDisplayBindingProxy.cpp  soapImagingBindingProxy.cpp  soapMedia2BindingProxy.cpp  soapMediaBindingProxy.cpp  soapPACSBindingProxy.cpp  soapPTZBindingProxy.cpp  soapPullPointSubscriptionBindingProxy.cpp  soapReceiverBindingProxy.cpp  soapSearchBindingProxy.cpp  soapwsddProxy.cpp
src/custom/: chrono_duration.cpp  duration.c
